--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Sparkling
+Theme Name: JDS Labs Blog Theme
 Theme URI: http://colorlib.com/wp/themes/sparkling
 Author: Colorlib
 Author URI: http://colorlib.com/
@@ -47,9 +47,9 @@ body {
   color: #6b6b6b;
   background-color: #f2f2f2;
   word-wrap: break-word;
-  font-family: 'Open Sans', sans-serif;
-  line-height: 1.7;
-  font-size: 14px;
+  font-family: 'Bulo', sans-serif;
+  line-height: 1.2;
+  font-size: 16px;
 }
 
 a {
