--- a/style.css
+++ b/style.css
@@ -711,19 +711,24 @@ object {
 }
 
 .well {
-  background-color: #fff;
-  padding: 30px;
-  border: 1px solid #dadada;
+  background-color: #ffffff;
+  padding: 28px 24px;
   overflow: hidden;
   clear: both;
+  box-shadow: 2px 2px 4px 0px rgba(0, 0, 0, 0.05);
+  border-radius: 2px;
+  border: 0;
 }
 
 #secondary .widget > h3 {
+  font-family: 'PFDin', serif;
   font-size: 14px;
+  font-weight: 400;
+  letter-spacing: 0.2em;
   text-transform: uppercase;
-  margin-bottom: 25px;
+  margin-bottom: 20px;
   margin-top: 0;
-  color: #636467;
+  color: #1D1D28;
 }
 
 #secondary .widget a {
@@ -755,6 +760,31 @@ object {
   #secondary {
     clear: both;
   }
+}
+
+.form-control.search-query {
+  border: 1px solid #E5E6E8;
+  height: 40px;
+  box-shadow: none;
+  padding-left: 8px;
+  padding-right: 8px;
+}
+
+.btn.btn-default {
+  height: 40px;
+  border-radius: 0;
+  display: flex;
+  align-items: center;
+}
+
+.btn.btn-default:focus {
+  outline: 0;
+  background-color: #D81713;
+  color: #ffffff;
+}
+
+.btn.btn-default .glyphicon {
+  top: 0;
 }
 
 /* Custom Category Widget */
