--- a/style.css
+++ b/style.css
@@ -691,7 +691,7 @@ object {
 #secondary .widget_archive ul li:before,
 #secondary .widget_categories ul li:before,
 #secondary .widget_recent_comments ul li:before {
-  font-family: 'Font Awesome\ 5 Free';
+  font-family: 'Font Awesome 6 Free';
   margin-right: 10px;
 }
 
@@ -773,7 +773,7 @@ object {
 .btn.btn-default {
   height: 40px;
   border-radius: 0;
-  display: flex;
+  display: inline-flex;
   align-items: center;
 }
 
@@ -2408,129 +2408,129 @@ p.logged-in-as {
 }
 
 #menu-social li a[href*='twitter.com']:before {
-  font-family: 'Font Awesome\ 5 Brands';
-  content: '\f099';
+  font-family: 'Font Awesome 6 Brands';
+  content: '\e61b';
 }
 
 #menu-social li a[href*='xing.com']:before {
-  font-family: 'Font Awesome\ 5 Brands';
+  font-family: 'Font Awesome 6 Brands';
   content: '\f168';
 }
 
 #menu-social li a[href*='facebook.com']:before {
-  font-family: 'Font Awesome\ 5 Brands';
+  font-family: 'Font Awesome 6 Brands';
   content: '\f39e';
   font-weight: 900;
 }
 
 #menu-social li a[href*='github.com']:before {
-  font-family: 'Font Awesome\ 5 Brands';
+  font-family: 'Font Awesome 6 Brands';
   content: '\f09b';
 }
 
 #menu-social li a[href*='gitlab.com']:before {
-  font-family: 'Font Awesome\ 5 Brands';
+  font-family: 'Font Awesome 6 Brands';
   content: '\f296';
 }
 
 #menu-social li a[href*='stackoverflow.com']:before {
-  font-family: 'Font Awesome\ 5 Brands';
+  font-family: 'Font Awesome 6 Brands';
   content: '\f16c';
 }
 
 #menu-social li a[href*='/feed']:before {
-  font-family: 'Font Awesome\ 5 Free';
+  font-family: 'Font Awesome 6 Free';
   content: '\f09e';
   font-weight: 900;
 }
 
 #menu-social li a[href*='dribbble.com']:before {
-  font-family: 'Font Awesome\ 5 Brands';
+  font-family: 'Font Awesome 6 Brands';
   content: '\f17d';
 }
 
 #menu-social li a[href*='skype.com']:before {
-  font-family: 'Font Awesome\ 5 Brands';
+  font-family: 'Font Awesome 6 Brands';
   content: '\f17e';
 }
 
 #menu-social li a[href*='foursquare.com']:before {
-  font-family: 'Font Awesome\ 5 Brands';
+  font-family: 'Font Awesome 6 Brands';
   content: '\f180';
 }
 
 #menu-social li a[href*='spotify.com']:before {
-  font-family: 'Font Awesome\ 5 Brands';
+  font-family: 'Font Awesome 6 Brands';
   content: '\f1bc';
 }
 
 #menu-social li a[href*='soundcloud.com']:before {
-  font-family: 'Font Awesome\ 5 Brands';
+  font-family: 'Font Awesome 6 Brands';
   content: '\f1be';
 }
 
 #menu-social li a[href*='vimeo.com']:before {
-  font-family: 'Font Awesome\ 5 Brands';
+  font-family: 'Font Awesome 6 Brands';
   content: '\f194';
 }
 
 #menu-social li a[href*='youtube.com']:before {
-  font-family: 'Font Awesome\ 5 Brands';
+  font-family: 'Font Awesome 6 Brands';
   content: '\f167';
 }
 
 #menu-social li a[href*='instagram.com']:before {
-  font-family: 'Font Awesome\ 5 Brands';
+  font-family: 'Font Awesome 6 Brands';
   content: '\f16d';
 }
 
 #menu-social li a[href*='flickr.com']:before {
-  font-family: 'Font Awesome\ 5 Brands';
+  font-family: 'Font Awesome 6 Brands';
   content: '\f16e';
 }
 
 #menu-social li a[href*='tumblr.com']:before {
-  font-family: 'Font Awesome\ 5 Brands';
+  font-family: 'Font Awesome 6 Brands';
   content: '\f173';
 }
 
 #menu-social li a[href*='pinterest.com']:before {
-  font-family: 'Font Awesome\ 5 Brands';
+  font-family: 'Font Awesome 6 Brands';
   content: '\f0d2';
 }
 
 #menu-social li a[href*='plus.google.com']:before {
-  font-family: 'Font Awesome\ 5 Brands';
+  font-family: 'Font Awesome 6 Brands';
   content: '\f0d5';
 }
 
 #menu-social li a[href*='linkedin.com']:before {
-  font-family: 'Font Awesome\ 5 Brands';
+  font-family: 'Font Awesome 6 Brands';
   content: '\f0e1';
 }
 
 #menu-social li a[href*='slideshare.net']:before {
-  font-family: 'Font Awesome\ 5 Brands';
+  font-family: 'Font Awesome 6 Brands';
   content: '\f1e7';
 }
 
 #menu-social li a[href*='mailto']:before {
-  font-family: 'Font Awesome\ 5 Free';
+  font-family: 'Font Awesome 6 Free';
   content: '\f0e0';
 }
 
 #menu-social li a[href*='t.me']:before {
-  font-family: 'Font Awesome\ 5 Brands';
+  font-family: 'Font Awesome 6 Brands';
   content: '\f2c6';
 }
 
 #menu-social li a[href*='telegram.me']:before {
-  font-family: 'Font Awesome\ 5 Brands';
+  font-family: 'Font Awesome 6 Brands';
   content: '\f2c6';
 }
 
 #menu-social li a[href*='docker.com']:before {
-  font-family: 'Font Awesome\ 5 Brands';
+  font-family: 'Font Awesome 6 Brands';
   content: '\f395';
 }
 
