--- a/style.css
+++ b/style.css
@@ -99,9 +99,9 @@ h6,
 .h4,
 .h5,
 .h6 {
-  color: #da4453;
+  color: #FF423E;
   font-weight: 700;
-  font-family: 'Roboto Slab', serif;
+  font-family: 'Bulo', serif;
 }
 
 h1,
@@ -180,8 +180,8 @@ input[type='url'],
 input[type='password'],
 input[type='search'],
 textarea {
-  color: #666;
-  border: 1px solid #e8e8e8;
+  color: #1D1D28;
+  border: 1px solid #E5E6E8;
   border-radius: 3px;
 }
 
@@ -192,7 +192,7 @@ input[type='url']:focus,
 input[type='password']:focus,
 input[type='search']:focus,
 textarea:focus {
-  color: #111;
+  color: #1D1D28;
 }
 
 input[type='text'],
@@ -879,6 +879,22 @@ object {
 .tagcloud a:focus {
   background-color: #da4453;
   border-color: #da4453;
+}
+
+/* Archives widget */
+
+#secondary .widget select {
+  font-size: 14px;
+  width: 100%;
+  height: 40px;
+  padding-left: 8px;
+  border: 1px solid #E5E6E8;
+  color: #AFAFBC;
+  background-color: #ffffff;
+}
+
+#secondary .widget select:focus {
+  outline: 0;
 }
 
 /* =Buttons
