--- a/style.css
+++ b/style.css
@@ -1943,22 +1943,69 @@ p.logged-in-as {
 ----------------------------------------------- */
 
 #footer-area {
-  background-color: #313233;
-  color: #999;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 1.2;
+  background-color: #1F1F22;
+  color: #AFAFBC;
+}
+
+@media (max-width: 767px) {
+  #footer-area {
+    font-size: 16px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
 }
 
 #footer-area a {
-  color: #dadada;
+  color: #AFAFBC;
 }
 
 #footer-area .footer-widget-area {
-  padding: 40px 0 20px 0;
+  padding: 96px 0 20px 0;
   overflow: hidden;
+}
+
+@media (max-width: 767px) {
+  #footer-area .footer-widget-area {
+    padding-top: 56px;
+  }
+  #footer-area .footer-widget {
+    margin-bottom: 12px;
+  }
+}
+
+#footer-area h4 {
+  font-family: 'PFDin', serif;
+  font-weight: 900;
+  font-size: 14px;
+  letter-spacing: 0.5em;
+  color: #ffffff;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+
+@media (max-width: 767px) {
+  #footer-area h4 {
+    margin-bottom: 32px;
+  }
 }
 
 #footer-area ul li,
 #footer-area .widget_nav_menu ul li a {
-  border-color: #444;
+  font-size: 14px;
+  margin-bottom: 4px;
+  border: 0;
+}
+
+@media (max-width: 767px) {
+  #footer-area ul li,
+  #footer-area .widget_nav_menu ul li a {
+    font-size: 16px;
+    margin-bottom: 24px;
+    font-weight: 400;
+  }
 }
 
 #footer-area .site-info nav ul li {
@@ -1996,35 +2043,35 @@ p.logged-in-as {
 }
 
 .copyright {
-  margin-top: 10px;
-  float: right;
-  text-align: right;
+  text-align: center;
 }
 
 #colophon {
-  background-color: #1f1f1f;
-  padding: 10px 0;
-  border-top: 1px solid #3a3a3a;
+  background-color: #1F1F22;
+  padding: 40px 0;
 }
 
 .site-info a {
-  color: #777;
+  color: #7E7E87;
 }
 
 .site-info a:hover,
 .site-info a:focus {
-  color: #999;
+  color: #FF423E;
 }
 
 #footer-area a:focus,
 #footer-area a:hover {
-  color: #fff;
+  color: #FF423E;
   background: transparent;
 }
 
 .site-info {
-  color: #999;
+  color: #7E7E87;
   font-size: 12px;
+  font-family: 'PFDin', serif;
+  letter-spacing: 0.5em;
+  text-transform: uppercase;
 }
 
 .footer-nav.nav > li > a:hover,
@@ -2082,14 +2129,212 @@ p.logged-in-as {
 }
 
 @media (max-width: 768px) {
-  .site-info,
-  .copyright {
+  .site-info {
     text-align: center;
   }
 
-  .footer-nav.nav,
-  .copyright {
+  .footer-nav.nav {
     float: none;
+  }
+}
+
+/* =Newsletter form
+----------------------------------------------- */
+
+@media (min-width: 1024px) {
+  .newsletter {
+    margin-left: -36px;
+    margin-right: -36px;
+  }
+}
+
+.newsletter form {
+  width: 100%;
+  color: #fff;
+}
+
+.newsletter .box {
+  border: 1px solid #4E4E5E;
+  border-radius: 8px;
+}
+
+.newsletter #mc_embed_signup_scroll {
+  display: flex;
+  justify-content: space-between;
+}
+
+.newsletter .content {
+  display: flex;
+  flex-direction: column;
+  flex: 1 1 0%;
+}
+
+@media (min-width: 1024px) {
+  .newsletter .content {
+    flex-direction: row;
+  }
+}
+
+.newsletter .content .col-1 {
+  display: flex;
+  align-items: center;
+  padding-left: 20px;
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
+
+@media (min-width: 768px) {
+  .newsletter .content .col-1 {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .newsletter .content .col-1 {
+    padding-left: 36px;
+    padding-top: 16px;
+    padding-bottom: 12px;
+  }
+}
+
+.newsletter .mail-icon {
+  width: 20px;
+  height: 20px;
+  color: #FF423E;
+  flex-shrink: 0;
+}
+
+.newsletter .title {
+  font-family: 'PFDin', serif;
+  font-size: 14px;
+  font-weight: 900;
+  text-transform: uppercase;
+  letter-spacing: 0.2em;
+  margin-left: 24px;
+}
+
+@media (min-width: 1024px) {
+  .newsletter .title {
+    white-space: nowrap;
+  }
+}
+
+.newsletter .content .col-2 {
+  display: flex;
+  align-items: center;
+  border-top: 1px solid #4E4E5E;
+  width: 100%;
+}
+
+@media (min-width: 1024px) {
+  .newsletter .content .col-2 {
+    border: 0;
+  }
+}
+
+.newsletter .fieldgroup {
+  flex: 1 1 0%;
+  padding-left: 20px;
+  padding-right: 12px;
+  padding-top: 8px;
+  padding-bottom: 12px;
+}
+
+@media (min-width: 1024px) {
+  .newsletter .fieldgroup {
+    margin-left: 80px;
+    padding-right: 36px;
+    padding-top: 12px;
+    padding-bottom: 16px;
+  }
+}
+
+.newsletter .email-input {
+  width: 100%;
+  font-family: 'Bulo', sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  color: #AFAFBC !important;
+  background-color: transparent;
+  border: 0;
+  border-radius: 0;
+  border-bottom: 1px solid #AFAFBC;
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+
+.newsletter .email-input:focus,
+.newsletter .email-input:active {
+  outline: 0;
+}
+
+.newsletter .email-input::placeholder {
+  font-style: italic;
+}
+
+.newsletter .submit-button {
+  height: 100%;
+  font-size: 12px;
+  color: #FF423E;
+  border: 0;
+  border-left: 1px solid #4E4E5E;
+  padding-left: 16px;
+  padding-right: 16px;
+  background-color: transparent;
+  padding-top: 10px;
+}
+
+@media (min-width: 1024px) {
+  .newsletter .submit-button {
+    padding-left: 28px;
+    padding-right: 28px;
+  }
+}
+
+.newsletter .submit-button:hover {
+  color: #D81713;
+  background-color: transparent;
+  border-left: 1px solid #4E4E5E;
+}
+
+.newsletter #mc_embed_signup input.mce_inline_error {
+  border-color: #ff423e !important;
+}
+
+.newsletter #mc_embed_signup div.mce_inline_error {
+  background-color: transparent !important;
+  font-size: 12px;
+  font-weight: 400 !important;
+  padding: 2px 0 0 !important;
+  color: #ff423e !important;
+  margin: 0 !important;
+}
+
+.newsletter #mce-error-response,
+.newsletter #mce-success-response {
+  font-size: 14px;
+  border-radius: 8px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+
+.newsletter #mce-error-response {
+  color: #ff423e;
+  border: 1px solid rgba(255, 66, 62, 0.5);
+}
+
+.newsletter #mce-success-response {
+  color: #27AE60;
+  border: 1px solid rgb(39, 174, 96, 0.5);
+}
+
+@media (min-width: 1024px) {
+  .newsletter #mce-error-response,
+  .newsletter #mce-success-response {
+    padding-left: 36px;
   }
 }
 
@@ -2137,15 +2382,14 @@ p.logged-in-as {
 }
 
 #footer-area .social-icons a {
-  margin-right: 7px;
-  background-color: #363636;
-  color: #fff;
+  margin-right: 16px;
+  color: #AFAFBC;
 }
 
-#footer-area .social-icons li a {
-  background-color: #363636;
-  color: #fff;
-  margin-right: 7px;
+#footer-area .social-icons {
+  text-align: left;
+  margin-left: 46px;
+  margin-top: -32px;
 }
 
 #menu-social li a span {
@@ -2350,7 +2594,7 @@ p.logged-in-as {
 
 #menu-social li a[href*='twitter.com']:hover,
 #menu-social li a[href*='twitter.com']:focus {
-  color: #000000 !important;
+  color: #CCCCCC !important;
 }
 
 #menu-social li a[href*='dribbble.com']:hover,
