--- a/style.css
+++ b/style.css
@@ -49,12 +49,12 @@ html {
 }
 
 body {
-  color: #000000;
+  color: #4E4E5E;
   background-color: #f2f2f2;
   word-wrap: break-word;
   font-family: 'Bulo', sans-serif;
-  line-height: 1.3;
-  font-size: 18px;
+  line-height: 1.4;
+  font-size: 16px;
 }
 
 a {
@@ -116,7 +116,7 @@ h2,
 
 h3,
 .h3 {
-  font-size: 24px;
+  font-size: 22px;
 }
 
 h4,
